--- a/index.html
+++ b/index.html
@@ -55,20 +55,7 @@
             </div>
         </div>
     </div>
-    <!-- <script>
-        const email = document.getElementById('email');
-        email.addEventListener('input',()=>validate(email));
-       const submit = document.getElementById(submit)
-       submit.addEventListener('click',()=>validate(email))
-        function validate(element){
-            if(element.validity.typeMismatch){
-                element.setCustomValidity("The Email is not the right format");
-                element.reportValidity();
-            }else{
-                element.setCustomValidity('');
-            }
-        }
-    </script> -->
-    <script src="index.js"></script>
+    
+    <script src="aman.js"></script>
 </body>
 </html>
